<resources>
    <string name="app_name">JAM</string>
    <string name="get_started_title1">Bienvenido</string>
    <string name="get_started_title2">a JAM</string>
    <string name="get_started_subtitle">Tu gestor sencillo de aplicaciones de trabajo</string>
    <string name="txt_get_started_swipe_to_continue">Desliza para continuar</string>
    <string name="new_job_title">Nueva Oportunidad</string>
    <string name="edit_job_title">Editar Oportunidad</string>
    <string name="hint_job_position">Posición</string>
    <string name="hint_company">Empresa</string>
    <string name="hint_location">Localización</string>
    <string name="hint_application_date">Fecha de aplicación</string>
    <string name="btn_reset_status">Resetear Estado </string>
    <string name="btn_reset_status_done">Hecho!</string>
    <string name="pending_status">Pendiente</string>
    <string name="accepted_status">Aceptada</string>
    <string name="rejected_status">Rechazada</string>
    <string name="date_picker_title">Selecciona la Fecha de Aplicación</string>
    <string name="add_new_job_application_error">Completa todos los campos por favor</string>
    <string name="status_filter_menu_all">Todas</string>
    <string name="status_filter_menu_pending">Pendientes</string>
    <string name="status_filter_menu_accepted">Aceptadas</string>
    <string name="status_filter_menu_rejected">Rechazadas</string>
    <string name="clean_alert_dialog_title">¡Atención!</string>
    <string name="clean_alert_dialog_message">Estás a punto de eliminar todas las aplicaciones marcadas como aceptada y rechazada. ¿Desea continuar?</string>
    <string name="clean_alert_dialog_positive_button_text">Limpiar</string>
    <string name="clean_alert_dialog_negative_button_text">Cancelar</string>
</resources>