<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/get_started_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    app:layoutDescription="@xml/fragment_get_started_scene"
    tools:context=".ui.fragments.GetStartedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/get_started_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/get_started_title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="16dp"
            android:text="@string/get_started_title1"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/get_started_title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/get_started_title2"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_title1" />

        <TextView
            android:id="@+id/get_started_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="7dp"
            android:maxEms="13"
            android:text="@string/get_started_subtitle"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started_title2" />

        <TextView
            android:id="@+id/txt_get_started_swipe_to_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/txt_get_started_swipe_to_continue"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/ic_swipe_to_continue"
            app:layout_constraintEnd_toEndOf="@+id/ic_swipe_to_continue"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/ic_swipe_to_continue"
            app:layout_constraintTop_toBottomOf="@+id/get_started_subtitle"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/ic_swipe_to_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="7dp"
            android:src="@drawable/ic_swipe_to_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>