<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.fragments.NewJobApplicationFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back_to_job_applications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/dark_grey"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/new_job_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_job_title"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_to_job_applications" />

    <ImageView
        android:id="@+id/ic_job_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/ic_job_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_job_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_job_position"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_job_position"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ic_job_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_job_position"
        app:layout_constraintTop_toTopOf="@+id/ic_job_position"
        app:layout_constraintVertical_bias="0.57">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_job_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_job_position" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_company"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_company"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ic_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_company"
        app:layout_constraintTop_toTopOf="@+id/ic_company"
        app:layout_constraintVertical_bias="0.57">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_company" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_location"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_location"
        app:layout_constraintTop_toTopOf="@+id/ic_location"
        app:layout_constraintVertical_bias="0.57">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_application_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_location" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_application_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_application_date"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="?attr/colorOnPrimary"
        app:hintTextColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/ic_application_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_application_date"
        app:layout_constraintTop_toTopOf="@+id/ic_application_date"
        app:layout_constraintVertical_bias="0.57">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_application_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_new_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_application_date"
        app:srcCompat="@drawable/ic_check"
        app:tint="?attr/colorPrimary"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>